chore: add user registration for public events
